--- a/src/styles.css
+++ b/src/styles.css
@@ -36,6 +36,21 @@ body{
 }
 
 .sidebar .bar.area{
-    padding: 20px;
     border: solid 1px black;
+    flex: 0 0 60px;
+    /* center text */
+    display: flex;
+    align-items: center;
+    padding-left: 20px;
+}
+
+/* display child todos of projects as wanted */
+.sidebar .project-and-child-todo{
+    display:flex;
+    flex-direction: column;
+}
+
+.sidebar .project-and-child-todo .todo.bar.area {
+    flex: 0 0 40px;
+    padding-left: 40px;
 }
