--- a/src/styles.css
+++ b/src/styles.css
@@ -11,8 +11,22 @@ h1, h2, h3, p{
 
 body{
     display: flex;
+    flex-direction: column;
     justify-content: center;
     margin-top: 10vh;
+    gap: 10px;
+}
+
+/* stylize all tiny circular buttons */
+.help.button, .add-todo.button, .new-dropdown.button{
+    aspect-ratio: 1/1;
+    border-radius: 60%;
+    border: none;
+    width: 25px;
+}
+
+.help.button {
+    align-self: flex-end;
 }
 
 /* section and style page into 3 main sections */
