--- a/src/styles.css
+++ b/src/styles.css
@@ -1,21 +1,26 @@
 /* webfonts, custom variables, global resets, and changes to body */
-@font-face{
+@font-face {
     font-family: "Cartoon";
     src: url("./fonts/3Dumb.woff2") format("woff2"),
         url("./fonts/3Dumb.woff") format("woff");
 }
 
 
-*{
+* {
     --base-background-color: gray;
+    --secondary-base-background-color: green;
+    --button-color: pink;
 }
 
-h1, h2, h3, p{
-    margin:0;
-    padding:0;
+h1,
+h2,
+h3,
+p {
+    margin: 0;
+    padding: 0;
 }
 
-body{
+body {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -25,7 +30,8 @@ body{
 }
 
 /* stylize all tiny circular buttons */
-.help.button, .add-todo.button, .new-dropdown.button{
+.help.button,
+.add-todo.button {
     aspect-ratio: 1/1;
     border-radius: 60%;
     border: none;
@@ -38,8 +44,8 @@ body{
 
 /* section and style page into 3 main sections */
 
-.base.area{
-    display:grid;
+.base.area {
+    display: grid;
     grid-template-rows: 100px auto;
     grid-template-columns: 200px 1fr;
     background-color: var(--base-background-color);
@@ -48,13 +54,13 @@ body{
 
 /* stylize header */
 
-.header.area{
+.header.area {
     grid-column: 1/3;
     display: flex;
     justify-content: center;
     align-items: center;
-    
-    .header.logo{
+
+    .header.logo {
         font-family: "Cartoon";
         font-size: 40px;
     }
@@ -62,26 +68,45 @@ body{
 
 
 /* stylize sidebar area*/
-.sidebar.area{
-    display:flex;
-    flex-direction: column;
-}
-
-.sidebar .bar.area{
-    border: solid 1px black;
-    flex: 0 0 60px;
-    /* center text */
+.sidebar.area {
     display: flex;
-    align-items: center;
-    padding-left: 20px;
+    flex-direction: column;
+    position: relative;
+
+    .button{
+        border: 2px solid var(--button-color);
+        transition-duration: 0.4s;
+        padding: 10px;
+    }
+
+    .button:hover, .button.pressed{
+        background-color: var(--button-color);
+        color: white;
+    }
+
+    .new-button.container{
+        position: absolute;
+        top: 50px;
+        flex-direction: column;
+        align-self: center;
+    }
+
+    .bar.area {
+        border: solid 1px black;
+        flex: 0 0 60px;
+        /* center text */
+        display: flex;
+        align-items: center;
+        padding-left: 20px;
+    }
 }
 
 /* stylize dropdown for new todo or project */
 
 
 /* display child todos of projects as wanted */
-.sidebar .project-and-child-todo{
-    display:flex;
+.sidebar .project-and-child-todo {
+    display: flex;
     flex-direction: column;
 }
 
