--- a/src/styles.css
+++ b/src/styles.css
@@ -34,8 +34,7 @@ body {
 }
 
 /* stylize all tiny circular buttons */
-.help.button,
-.add-todo.button {
+.help.button{
     aspect-ratio: 1/1;
     border-radius: 60%;
     border: none;
@@ -172,4 +171,23 @@ body {
         align-items:end;
     }
 
+    /* default text content */
+    .default.text{
+        text-align: center;
+        font-size: 20px;
+    }
+
+    .add-todo.button{
+        align-self: center;
+        width: max-content;
+        aspect-ratio: auto;
+        padding: 10px;
+        border: 2px solid var(--button-color);
+        transition-duration: 0.4s;
+    }
+
+    .add-todo.button:hover{
+        background-color: var(--button-color);
+        color: white;
+    }
 }
