--- a/src/styles.css
+++ b/src/styles.css
@@ -82,6 +82,7 @@ body {
         border: 2px solid var(--button-color);
         transition-duration: 0.4s;
         padding: 10px;
+        background-color: white;
     }
 
     .button:hover, .button.pressed{
@@ -184,6 +185,7 @@ body {
         padding: 10px;
         border: 2px solid var(--button-color);
         transition-duration: 0.4s;
+        background-color: white;
     }
 
     .add-todo.button:hover{
