--- a/src/styles.css
+++ b/src/styles.css
@@ -155,6 +155,7 @@ body {
     flex-direction: column;
     gap: 10px;
     padding: 20px;
+    background: var(--content-background-color);
 
     .content.title{
         align-self:center;
