--- a/src/styles.css
+++ b/src/styles.css
@@ -195,3 +195,31 @@ body {
         color: white;
     }
 }
+
+/* stylizing dialogs! */
+
+dialog.delete.dialog form{
+    display:grid;
+    grid-template-columns: max-content 1fr;
+    gap: 10px;
+    align-items: center;
+
+    label{
+        text-align:end;
+    }
+
+    select{
+        padding: 5px;
+    }
+
+    .container{
+        grid-column: 2/3;
+        display: flex;
+        gap: 20px;
+        justify-content: flex-end;
+    }
+
+    .container .button{
+        padding: 5px;
+    }
+}
